@@ -1,4 +1,15 @@
 release 0.8 (2008-06-20 or 2008-07-25)
+- Simplified web.xml configuration when using package scanning for root
+  resource classes. For package scanning the web.xml need only contain the 
+  following:
+
+        <init-param>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
+            <param-value>*list of ';' separated package names*</param-value>
+        </init-param>
+
+  previously it was necessary to declare another <init-param> referencing the
+  the PackageResourceConfig class.  
 - The container SPI is improved and simplified, see JavaDoc of:
     com.sun.jersey.spi.container.ContainerRequest
     com.sun.jersey.spi.container.InBoundHeaders
